# mysite

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  app.sh  docker-compose.yml  manage.py  pj_utils.py  pyproject.toml
.envs/local/: db.env.example  django.env.example
api/: common.py  urls.py
api/auth/: serializers.py  urls.py  views.py
api/auth/tests/: test_login.py
api/user/: serializers.py  urls.py  views.py
api/user/tests/: test_current_user_profile.py  test_get_user_profile.py
config/: asgi.py  gunicorn.conf.py  urls.py  wsgi.py
config/settings/: default.py  dev.py  local.example.py  prod.py
core/helpers/: helpers.py  test_helpers.py
core/migrations/: 0001_initial.py  0002_user_created_at_user_updated_at.py  0003_userprofile_alter_user_table.py
core/models/: __init__.py  user.py
docker/prod/: Dockerfile.prod  django.env.example  docker-compose.prod.yml
mysite/: admin.py  settings.py  urls.py
mysite/api/: common.py  urls.py
mysite/api/auth/: serializers.py  urls.py  views.py
mysite/api/auth/tests/: test_login.py
mysite/api/user/: serializers.py  urls.py  views.py
mysite/api/user/tests/: test_current_user_profile.py  test_get_user_profile.py
mysite/management/commands/: create_sample_data.py  seed_cat.py
mysite/migrations/: 0001_initial.py
mysite/models/: __init__.py  cat.py  user.py
mysite/settings/: default.py  dev.py  local.py  prod.py
requirements/: local.txt  prod.txt
