[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["thuongpv <ckpvthuongft@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
psycopg2 = "^2.9.3"
djangorestframework-simplejwt = "^5.2.0"
gunicorn = "^20.1.0"
drf-spectacular = "^0.22.1"
django-environ = "^0.8.1"


[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.4.0"
django-extensions = "^3.1.5"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pre-commit = "^2.19.0"
debugpy = "^1.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
